# sweepingTools

./: CMakeLists.txt  LICENSE.txt  README.md  configure.sh  setup-deps.sh
scripts/: aigersweeping.py  btorsweeping.py
src/: CMakeLists.txt  aiger2cnf.cpp  btorfunc.h
src/btorsim/: btorsim_pm.cpp
src/simuaiger/: aigextract.cpp  aigmerge.cpp  simuaiger.cpp  twosat.h
src/simubtor/: btoreliminate.cpp  btorexpand.cpp  btorextract.cpp  btormerge.cpp  simubtor.cpp
